# connect-4-player-net

./: .gitignore  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
src/: app.py  encode.py  evaluate.py  four_in_a_row.py  game.py  mcts.py  model.py  opponents.py  play.py  replay.py  selfplay.py  solver.py  train.py
tests/: test_encode.py  test_game.py  test_mcts.py  test_solver.py
