[project]
name = "connect-four-player-net"
version = "0.1.0"
description = "AlphaZero-style Connect Four player: residual policy+value CNN trained from self-play with PUCT MCTS."
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "torchinfo>=1.8.0",
]
